# staze

./: .gitignore  Cargo.toml  README.md  demo.tape  dist-workspace.toml
ascii/cat/moving/: frame1.txt  frame2.txt  frame3.txt  frame4.txt
ascii/cat/sitting/: frame1.txt  frame2.txt  frame3.txt  frame4.txt  frame5.txt
ascii/staz/celebrating/: frame1.txt  frame2.txt
ascii/staz/idle/: frame1.txt  frame2.txt  frame3.txt  frame4.txt  frame5.txt
ascii/staz/paused/: frame1.txt
ascii/staz/sleeping/: frame0.txt  frame1.txt  frame2.txt  frame3.txt
ascii/staz/working/: frame1.txt  frame2.txt  frame3.txt  frame4.txt  frame5.txt
src/: config.rs  db.rs  export.rs  history.rs  home.rs  main.rs  session.rs  stats.rs  staz.rs  tags.rs
